tests/paczka1/small_fuzzy/56120855.err
Error in line 3: JhGPP8T A48 50,8
Error in line 5: dRbMP4Fw A48 60,8
Error in line 9: JhGPP8 S137 37,5
Error in line 12: S34 S34 23,8
